REGRESSION (r184337): ASSERT failed in debug builds for tagged templates https://bugs.webkit.org/show_bug.cgi?id=145013

Reviewed by Filip Pizlo.

Fix the regression introduced by r184337.

1. JSTemporaryRegistryKey::s_info should inherit the Base::s_info,
   JSDestructibleObject::s_info.

2. The first register argument of BytecodeGenerator::emitNode
   should be a referenced register if it is a temporary register.

* bytecompiler/NodesCodegen.cpp:
(JSC::TaggedTemplateNode::emitBytecode):
* runtime/JSTemplateRegistryKey.cpp:

Canonical link: https://commits.webkit.org/163049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184347 268f45cc-cd09-0410-ab3c-d52691b4dbfc